fix: change bg-images paths according to new project structure, change z-index properties for header

--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
   min-height: 890px;
-  background: url('../images/feynman.png') bottom left no-repeat;
+  background: url('../../images/feynman.png') bottom left no-repeat;
   background-size: 867px 637px;
   position: relative;
   display: flex;
