--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -1,7 +1,6 @@
 .header__main-illustration {
   width: 765px;
   height: 608px;
-  z-index: 1;
   position: absolute;
   right: 0;
   bottom: 0;
